tscheem/scheem.peg
start =
    comment? whitespace* e:expression whitespace*
      { return e; }

comment =
  ";;" [^\n]*

whitespace = 
  [ \t]
  / "\n" comment?

_ = whitespace*

validchar
    = [0-9a-zA-Z_?!+-=@#$%^&*/.]

atom =
    chars:validchar+
        { var value = chars.join("");
          var numVal = parseFloat(value);
          if(isNaN(numVal)) {
            numVal = parseInt(value);
            if(isNaN(numVal)) return value;
          } 
          return numVal; }

spaceexpression = 
  whitespace+ expr:expression
      {return expr; }

typename = 
    chars:[a-zA-Z]+
      { return chars.join(""); }

typevalue = 
  t:("num" / "bool" / "sym")
    { return { tag: 'basetype', name: t }; }
/ ":" abs:typename
    { return { tag: 'abstype', name: abs }; }
/ "list<" type:type ">"
    { return { tag: 'listtype', type: type }; }
/ "(" _ type:type _ ")"
    { return type; }

type = 
  left:typevalue _ "->" _ right:type
    { return { tag: 'arrowtype', left: left, right: right }; }
/ typevalue
 
typeexpr = 
  "[" expr:expression _ type:type _ "]"
    { return { tag: 'typeexpr',
               expr: expr,
               type: type }; }

expression =
  typeexpr
  / atom
  / "'" expr:expression
    { return [ "quote", expr ]; }
  / "(" ")"
    { return []; }
  / "(" whitespace* first:expression rest:spaceexpression* whitespace* ")"
    { return [ first ].concat(rest); }
